--- a/web/src/App.css
+++ b/web/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 } */
+
+html,
+body {
+  height: 100%;
+  background-image: linear-gradient(-105deg, #009acc, #363795);
+}
+
+button:hover {
+  filter: brightness(50%);
+}
+button:active {
+  filter: brightness(30%);
+}
